--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "node-notifier": "^5.2.1",
       "jquery": "^1.9.1",
       "popper.js": "^1.12.9",
-      "bootstrap": "^4.0.0"
+      "bootstrap": "^4.0.0",
+      "newsapi": "^2.2.0"
   }
 }
