--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "electron": "^1.8.4"
   },
   "dependencies": {
-    "node-notifier": "^5.2.1",
-    "jquery": "^1.9.1",
-    "popper.js": "^1.12.9",
     "bootstrap": "^4.0.0",
-    "newsapi": "^2.2.0"
+    "electron-context-menu": "^0.9.1",
+    "jquery": "^1.9.1",
+    "newsapi": "^2.2.0",
+    "node-notifier": "^5.2.1",
+    "popper.js": "^1.12.9"
   }
 }
