--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^1.9.1",
     "newsapi": "^2.2.0",
     "node-notifier": "^5.2.1",
+    "npm": "^5.7.1",
     "popper.js": "^1.12.9"
   }
 }
